# Nemesis

./: CMakeLists.txt  Makefile  Makefile.win  README.md  simplex.c  stack.c  stack.h  test.c  test.lp
doc/: Nemesis.bib  Nemesis.tex
src/: main.c  matrix.c  matrix.h  parser.c  parser.h  queue.c  queue.h  simplex.c  simplex.h  stack.c  testMain  vector.c  vector.h
